--- a/workspace_script/변수.html
+++ b/workspace_script/변수.html
@@ -10,6 +10,23 @@
   <script>
     //자바스크립트의 출력문
     console.log('안녕하세요');
+    console.log(100);
+    console.log(10 + 20);
+    console.log('java' + 'python');
+    console.log('java' + 5);
+
+    //변수 const, let, var
+    //var : 이전 버전의 자바스크립트에서 사용함
+    //const : 변하지 않는 값을 저장할 때 사용
+    //let : 변하는 값을 저장할 때 사용
+    const a = 10;
+    console.log(a);
+    // a = 20; 오류!!!
+
+    let b = 20;
+    b = 10.5;
+    b = 'java';
+
   </script>
 </body>
 </html>
